Add an endpoint returning the details of an item
